# authware

./: Cargo.toml  Makefile  README.md
.github/workflows/: docker.yml  integration.yml  rust.yml  snyk.yml
example/: .env  docker-compose.yml
example/traefik/: rules.toml  traefik.toml
src/: lib.rs  main.rs
src/auth/: admin3ws.rs  combined.rs  mod.rs  sample.rs
src/handler/: auth.rs  data.rs  error.rs  keep_alive.rs  login.rs  logout.rs  mod.rs  validate.rs
src/model/: auth.rs  config.rs  data.rs  mod.rs  service.rs  store.rs
src/store/: encryptor.rs  memory.rs  mod.rs  redis.rs
src/tls/: cert.rs
src/utils/: ip_extractor.rs  mod.rs  secret_str.rs
tests/: .env  Dockerfile.test  Makefile  docker-compose.yml  integration_test.rs
