[package]
name = "authware"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = "0.4"
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "trust-dns", "multipart", "stream", "json"] }
rand = "0.8"
async-trait = "0.1"
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart", "macros", "http2"] }
tower-http = { version = "0.5", features = ["limit", "timeout", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tower = "0.4"
thiserror = "1.0"
futures = "0.3"
base64 = "0.22"
axum-extra = { version = "0.9", features = ["typed-header"] }
url = "2.5"
humantime = "2.1"
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
reqwest = "0.12"
axum-server = { version = "0.7", features = ["tls-rustls"] }
deadpool-redis = "0.18"
magic-crypt = "3.1"
urlencoding = "2.1"
serde-xml-rs = "0.6"
again = { version = "0.1", features = ["rand"] }

[dev-dependencies]
test-case = "3.3"

# [lib]
# name = "authware"
# path = "src/lib.rs"

[[bin]]
name = "authware"
path = "src/main.rs"

